[tool.poetry]
name = "anoexpress"
version = "0.0.0"
description = "A package to access insecticide resistance gene expression meta analyse in Anopheles mosquitoes"
authors = [
    "Sanjay Nagi <sanjay.nagi@lstmed.ac.uk>",
    ]
packages = [
    { include = "anoexpress" }
]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
pandas = "*"
seaborn = "*"
numpy = "*"
plotly = "*"
scipy = "*"
tqdm = "*"
statsmodels = "*"

[tool.poetry.dev-dependencies]
pre-commit = "*"
black = "*"
pytest = "*"
notebook = "*"
jupyterlab = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
