[tool.poetry]
name = "anoexpress"
version = "0.1.7.1"
description = "A package to access insecticide resistance gene expression meta analyse in Anopheles mosquitoes"
authors = [
    "Sanjay Nagi <sanjay.nagi@lstmed.ac.uk>",
    ]
packages = [
    { include = "anoexpress" }
]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7.1, <3.11"
malariagen_data = "*"
scikit-allel="*"
pandas = [
    {version="<1.4", python=">=3.7.1,<3.8"},
    {version="*", python=">=3.8,<3.11"}
]
seaborn = "*"
numpy = "*"
bokeh = "*"
plotly = "*"
scipy = "*"
tqdm = "*"
statsmodels = "*"

[tool.poetry.dev-dependencies]
pre-commit = "*"
black = "*"
pytest = "*"
notebook = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
